--- a/_config.yml
+++ b/_config.yml
@@ -55,11 +55,11 @@ menu:
   - title:             Publications
     url:               /publications
   - title:             Presentations
-    url:               /presentations/
+    url:               /presentations
   - title:             Workshops
-    url:               /workshops/        
+    url:               /workshops
   - title:             Misc
-    url:               /misc/
+    url:               /misc
 
 # Add links to the footer.
 # Typically you'll want to link to your cookie- or privacy policy (if appliable), etc..
