--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -2,34 +2,33 @@
 # Must be the same as `author` in `_config.yml`.
 # Change `author1` to your shortname.
 author1:
-  name:              Markus Kantner
-  email:             kantner@wias-berlin.de
+  name:              <firstname> <lastname>
+  email:             <mail@domain.tld>
 
   # Used at the bottom of each page and at the top of the `about` layout
   # Markdown enabled, can use multiple paragraphs (enabled by `|`)
   about:             |
-    I'm a Post-Doc Researcher at the [Weierstrass Institute for Applied Analysis and Stochastics (WIAS Berlin)](https://www.wias-berlin.de).
-		I am head of the research focus platform [Simulation of Semiconductor Devices for Quantum Technologies (SemQuTech)](https://www.wias-berlin.de/research/fps/fp2/) and member of the research group [Laser Dynamics](https://www.wias-berlin.de/research/rgs/fg2/).
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+    
+    Open `_data/authors.yml` to edit this text.
 
   # This photo will be used in the about section
   picture:
-    path:            /assets/img/profile/mkantner.png
+    path:            https://via.placeholder.com/128x128
     # srcset is optional, but can be used to provide higher res versions for retina displays
-    #srcset:
-    #  1x:            https://via.placeholder.com/128x128
-    #  2x:            https://via.placeholder.com/256x256
+    srcset:
+      1x:            https://via.placeholder.com/128x128
+      2x:            https://via.placeholder.com/256x256
 
   # Social media icons in sidebar
   # Comment/uncommet to show/hide
   # Rearrange to change the order in which they appear
   social:
-    # twitter:         <username>
-    # github:          kantner
-    email:            kantner@wias-berlin.de
-    orcid:            0000-0003-4576-3135
-    googlescholar:    ISRqIw0AAAAJ        
-    researchgate:     Markus-Kantner
-    linkedin:         markus-kantner-45415b166
+    twitter:         <username>
+    github:          <username>
+    # email:           <mail@domain.tld>
     # rss:             https://<url>/feed.xml
     # facebook:        <username>
     # google:          <number>
@@ -57,7 +56,8 @@ author1:
     # stackoverflow:   <number/username>
     # npm:             <username>
     # hackernews:      <username>
-    # trello:          <firstnamelastname>    
+    # trello:          <firstnamelastname>
+    # linkedin:        <firstname-lastname-string>
     # xing:            <firstname_lastname_counter>
     # blogger:         <number>
     # delicious:       <username>
@@ -67,16 +67,16 @@ author1:
     # keybase          <username>
 
 # Another author (optional)
-#author2:
-#  name:              <firtname> <lastname>
-#  email:             <mail@domain.tld>
-#  about:             |
-#    Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-#    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-#    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+author2:
+  name:              <firtname> <lastname>
+  email:             <mail@domain.tld>
+  about:             |
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 
-#    Open `_data/authors.yml` to edit this text.
+    Open `_data/authors.yml` to edit this text.
 
-#  picture:           https://placehold.it/128x128
-#  twitter:           <username>
-#  github:            <username>
+  picture:           https://placehold.it/128x128
+  twitter:           <username>
+  github:            <username>
