--- a/_config.yml
+++ b/_config.yml
@@ -50,6 +50,8 @@ author:
 menu:
   - title:             About
     url:               /about
+  - title:             Short CV
+    url:               /shortcv
   - title:             Research
     url:               /research
   - title:             Publications
