--- a/_config.yml
+++ b/_config.yml
@@ -106,7 +106,8 @@ remote_theme: hydecorp/hydejack@v9
 # ----------------------------------------------------------------------------------------
  
 # Sidebar image and theme color of the site.
-accent_image:          /assets/img/background/bromo.jpg
+accent_image:          /assets/img/background/bluemountains.jpg
+#accent_image:          /assets/img/background/bromo.jpg
 #accent_image:          /assets/img/background/taipeh.jpg
 accent_color:          rgb(0,93,168)
 
