--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,7 @@ author:
 # Add links to the sidebar.
 menu:
   - title:             About
-    url:               /about
+    url:               /index
   - title:             Short CV
     url:               /shortcv
   - title:             Research
@@ -68,7 +68,7 @@ menu:
 # Typically you'll want to link to your cookie- or privacy policy (if appliable), etc..
 legal:
   - title:             About
-    url:               /about
+    url:               /index
   - title:             Short CV
     url:               /shortcv
   - title:             Research
