--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -8,7 +8,7 @@ author1:
   # Used at the bottom of each page and at the top of the `about` layout
   # Markdown enabled, can use multiple paragraphs (enabled by `|`)
   about:             |
-    I'm a Post-Doc Researcher at the [Weierstrass Institute for Applied Analysis and Stochastics (WIAS Berlin)](https://www.wias-berlin.de).
+    I'm a staff researcher at the [Weierstrass Institute for Applied Analysis and Stochastics (WIAS Berlin)](https://www.wias-berlin.de).
     I am head of the research focus platform [Simulation of Semiconductor Devices for Quantum Technologies (SemQuTech)](https://www.wias-berlin.de/research/fps/fp2/) and member of the research group [Laser Dynamics](https://www.wias-berlin.de/research/rgs/fg2/).
     
   # This photo will be used in the about section
